--- a/index.html
+++ b/index.html
@@ -594,11 +594,11 @@
                     <div class="img-holder"></div>
                         <div class="slideshow-container">
                           <div class="slide fade">
-                            <img src="senai.png" alt="Image 1">
+                            <img src="assets/imgs/senai.png" alt="Image 1">
                             <p>Associated Text 1</p>
                           </div>
                           <div class="slide fade">
-                            <img src="uel.png" alt="Image 2">
+                            <img src="assets/imgs/uel.png" alt="Image 2">
                             <p>Associated Text 2</p>
                           </div>
                           <div class="slide fade">
