--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
     <script src="assets/vendors/isotope/isotope.pkgd.js"></script>
     
     <!-- Google mpas -->
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtme10pzgKSPeJVJrG1O3tjR6lk98o4w8&callback=initMap"></script>
+    <script async defer src="https://www.google.com/maps/@-25.4437531,-49.2773614,17z?entry=ttu"></script>
 
     <!-- JohnDoe js -->
     <script src="assets/js/johndoe.js"></script>
