--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                     <a href="#" data-filter=".eng" class="active">
                         Data Engineering
                     </a>
-                    <a href="#" data-filter=".advertising">
+                    <a href="#" data-filter=".science">
                         Data Science
                     </a>
                     <a href="#" data-filter=".web">
@@ -377,7 +377,7 @@
                     </a>
                 </div>
                 <div class="portfolio-container"> 
-                    <div class="col-md-6 col-lg-4 web eng">
+                    <div class="col-md-6 col-lg-4 eng">
                         <div class="portfolio-item">
                             <img src="assets/imgs/oil_23.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
                             <div class="content-holder">
@@ -389,25 +389,25 @@
                             </div>   
                         </div>             
                     </div>
-                    <div class="col-md-6 col-lg-4 web eng">
+                    <div class="col-md-6 col-lg-4 eng">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/web-2.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
+                            <img src="assets/imgs/retail_23.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/web-2.jpg"></a>
+                                <a class="img-popup" href="assets/imgs/retail_23.png"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <h6 class="title">Retail stocks Analysis</h6>
+                                    <p class="subtitle">Pandas, ifinance, seaborn and matplotlib</p>
                                 </div>
                             </div> 
                         </div>                         
                     </div>
-                    <div class="col-md-6 col-lg-4 web eng">
+                    <div class="col-md-6 col-lg-4 science">
                         <div class="portfolio-item">
                             <img src="assets/imgs/heatmap_retail.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                         
                             <div class="content-holder">
                                 <a class="img-popup" href="https://github.com/crisGriebler/stock_analysis/blob/main/retail_stocks.ipynb"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">Retail stocks Analysis</h6>
+                                    <h6 class="title">Heatmap of Brazilian Stocks - Retail Sector</h6>
                                     <p class="subtitle">Pandas, ifinance, seaborn and matplotlib</p>
                                 </div>
                             </div>    
@@ -499,11 +499,11 @@
                             </div>
                         </div>                                                     
                     </div> 
-                    <div class="col-md-6 col-lg-4 branding new">
+                    <div class="col-md-6 col-lg-4 science">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/branding-3.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">   
+                            <img src="assets/imgs/heatmap_retail.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">   
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/branding-3.jpg"></a>
+                                <a class="img-popup" href="assets/imgs/heatmap_retail.png"></a>
                                 <div class="text-holder">
                                     <h6 class="title">BRANDING</h6>
                                     <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
@@ -511,7 +511,7 @@
                             </div>
                         </div>                                                    
                     </div> 
-                    <div class="col-md-6 col-lg-4 branding eng">
+                    <div class="col-md-6 col-lg-4 science">
                         <div class="portfolio-item">
                             <img src="assets/imgs/web-scrap.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                      
                             <div class="content-holder">
