--- a/index.html
+++ b/index.html
@@ -389,13 +389,25 @@
                             </div>   
                         </div>             
                     </div>
-                    <div class="col-md-6 col-lg-4 eng">
+                    <div class="col-md-6 col-lg-4">
                         <div class="portfolio-item">
                             <img src="assets/imgs/retail_23.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/retail_23.png"></a>
                                 <div class="text-holder">
                                     <h6 class="title">Retail stocks Analysis</h6>
+                                    <p class="subtitle">Pandas, ifinance, seaborn and matplotlib</p>
+                                </div>
+                            </div> 
+                        </div>                         
+                    </div>
+                    <div class="col-md-6 col-lg-4 eng">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/ibov.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/ibov.png"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">Index Analysis</h6>
                                     <p class="subtitle">Pandas, ifinance, seaborn and matplotlib</p>
                                 </div>
                             </div> 
@@ -501,9 +513,9 @@
                     </div> 
                     <div class="col-md-6 col-lg-4 science">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/heatmap_retail.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">   
+                            <img src="assets/imgs/heatmap_oil.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">   
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/heatmap_retail.png"></a>
+                                <a class="img-popup" href="assets/imgs/heatmap_oil.png"></a>
                                 <div class="text-holder">
                                     <h6 class="title">BRANDING</h6>
                                     <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
