--- a/index.html
+++ b/index.html
@@ -425,14 +425,14 @@
                             </div>    
                         </div>              
                     </div> 
-                    <div class="col-md-6 col-lg-4 web">
+                    <div class="col-md-6 col-lg-4 eng">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/web-4.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
+                            <img src="assets/imgs/dax.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/web-4.jpg"></a>
+                                <a class="img-popup" href="assets/imgs/dax.png"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">Web Scraping project</h6>
-                                    <p class="subtitle">Selector, xpath, Response </p>
+                                    <h6 class="title">KPI's, sales and Revenue</h6>
+                                    <p class="subtitle">Power BI, DAX, Python, Excel</p>
                                 </div>
                             </div>
                         </div>                                                     
