--- a/index.html
+++ b/index.html
@@ -680,6 +680,7 @@
                                     <p>Summary</p>
             
                                     <p><b>Master's degree in Biomedical Engineering.</b></p>
+                                    <p>LAPIM.</p>
                               </div>
                             </div>
                         
