--- a/index.html
+++ b/index.html
@@ -664,6 +664,7 @@
                                     <p>Summary</p>
             
                                     <p><b>Bachelor's degree in Physics.</b></p>
+                                    <p>Research about neutrino's physics and its interactions with matter.</p>
                               </div>
                               <div class="slide fade">
                                 <div class="img-holder">
