--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
                                     </p>
                                     <p>Summary</p>
             
-                                    <p><b>Master's degree in Biomedical Engineering.</b></p>
+                                    <p><b>Master's degree in Biomedical Engineering</b></p>
                                     <p>LAPIM.</p>
                               </div>
                             </div>
