--- a/index.html
+++ b/index.html
@@ -681,7 +681,8 @@
                                     <p>Summary</p>
             
                                     <p><b>Master's degree in Biomedical Engineering</b></p>
-                                    <p>LAPIM.</p>
+                                    <p> Performance evaluation of mammography and x-ray equipment according to Portaria 45/98 and RDC 330/19.LAPIM. 
+                                    </p>
                               </div>
                             </div>
                         
