--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
                               </div>
                               <div class="slide fade">
                                 <div class="img-holder">
-                                    <img src="assets/imgs/ppgeb.png" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                                    <img src="assets/imgs/senai.png" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                                 </div>
                                 <div class="content-holder">
                                     <h6 class="title">Certifications</h6>
@@ -699,7 +699,7 @@
                                     <p>Summary</p>
             
                                     <p><b>Graduated Course in Artificial intelligence applied in Industry </b></p>
-                                    <p> Performance evaluation of mammography and x-ray equipment according to Portaria 45/98 and RDC 330/19. (LAPIM) 
+                                    <p> 
                                     </p>
                               </div>
                             </div>
