--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
                                     </p>
                                     <p>Summary</p>
             
-                                    <p><b>Graduated Course in Artificial intelligence applied in Industry </b></p>
+                                    <p><b>Graduated Course in Artificial intelligence applied in Industry.</b></p>
                                     <p> 
                                     </p>
                               </div>
