--- a/index.html
+++ b/index.html
@@ -160,19 +160,19 @@
                         </div>
                         <div class="card-body">
                             <h6 class="title text-danger">2019 - 2023</h6>
-                            <P>PhD in Nuclear Physics</P>
+                            <P><b>PhD in Nuclear Physics</b></P>
                             <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error corrupti recusandae obcaecati odit repellat ducimus cum, minus tempora aperiam at.</P>
                             <hr>
                             <h6 class="title text-danger">2021 - 2022</h6>
-                            <P>Graduated Course in Artificial Intelligence and Machine Learning</P>
+                            <P><b>Graduated Course in Artificial Intelligence and Machine Learning</b></P>
                             <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
                             <hr>
                             <h6 class="title text-danger">2017 - 2019</h6>
-                            <P>Master's Degreee in Biomedical Engineering</P>
+                            <P><b>Master's Degreee in Biomedical Engineering</b></P>
                             <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, id officiis quas placeat quia voluptas dolorum rem animi nostrum quae.aliquid repudiandae saepe!.</P>
                             <hr>
                             <h6 class="title text-danger">2010 - 2015</h6>
-                            <P>Bachelor's Degree in Physics</P>
+                            <P><b>Bachelor's Degree in Physics</b></P>
                             <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
                         </div>
                     </div>
