--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
 
                         <p><b>Hub de Inteligência Artificial.</b></p>
                         
-                        <p>Certification of a Graduate Course in Artificial Intelligence applied in the industry sector.</p>
+                        <p>Certification of a Graduate Course in Artificial Intelligence applied in the industrial sector.</p>
 
                         <a href="#" class="read-more">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
