--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                                 <a class="img-popup" href="assets/imgs/heatmap_oil.png"></a>
                                 <div class="text-holder">
                                     <h6 class="title">BRANDING</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam</p>
                                 </div>
                             </div>
                         </div>                                                    
