--- a/index.html
+++ b/index.html
@@ -431,21 +431,21 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/dax.png"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">KPI's, sales and Revenue</h6>
+                                    <h6 class="title">DATABASE</h6>
                                     <p class="subtitle">Power BI, DAX, Python, Excel</p>
                                 </div>
                             </div>
                         </div>                                                     
                     </div>
 
-                    <div class="col-md-6 col-lg-4 web eng"> 
+                    <div class="col-md-6 col-lg-4 eng"> 
                         <div class="portfolio-item">
-                            <img src="assets/imgs/advertising-1.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                               
+                            <img src="assets/imgs/powerbi.ong" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                               
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/advertising-1.jpg"></a>
+                                <a class="img-popup" href="assets/imgs/powerbi.png"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">ADVERSITING</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <h6 class="title">Poewer BI</h6>
+                                    <p class="subtitle">Power BI, DAX, Python, Excel</p>
                                 </div>
                             </div>
                         </div>                                                       
