--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/powerbi.png"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">Poewer BI</h6>
+                                    <h6 class="title">Power BI</h6>
                                     <p class="subtitle">Power BI, DAX, Python, Excel</p>
                                 </div>
                             </div>
@@ -454,10 +454,10 @@
                         <div class="portfolio-item">
                             <img src="assets/imgs/social.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">  
                            <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/web-3.jpg"></a>
+                                <a class="img-popup" href="assets/imgs/social.png"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <h6 class="title">Financial Analysis</h6>
+                                    <p class="subtitle">Google Sheets, DAX, Python, Excel</p>
                                 </div>
                             </div>
                         </div>                                                     
