--- a/index.html
+++ b/index.html
@@ -389,18 +389,17 @@
                             </div>   
                         </div>             
                     </div>
-                    <div class="col-md-6 col-lg-4">
+                    <div class="col-md-6 col-lg-4 eng">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/retail_23.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
-                            <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/retail_23.png"></a>
+                            <img src="assets/imgs/social.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">  
+                           <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/social.png"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">Retail stocks Analysis</h6>
-                                    <p class="subtitle">Pandas, ifinance, seaborn and matplotlib</p>
+                                    <h6 class="title">Financial Analysis</h6>
+                                    <p class="subtitle">Google Sheets, DAX, Python, Excel</p>
                                 </div>
-                            </div> 
-                        </div>                         
-                    </div>
+                            </div>
+                        </div>                                                     
                     <div class="col-md-6 col-lg-4 eng">
                         <div class="portfolio-item">
                             <img src="assets/imgs/ibov.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
@@ -425,6 +424,19 @@
                             </div>    
                         </div>              
                     </div> 
+                </div>
+                <div class="col-md-6 col-lg-4 science">
+                    <div class="portfolio-item">
+                        <img src="assets/imgs/retail_23.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
+                        <div class="content-holder">
+                            <a class="img-popup" href="assets/imgs/retail_23.png"></a>
+                            <div class="text-holder">
+                                <h6 class="title">Retail stocks Analysis</h6>
+                                <p class="subtitle">Pandas, ifinance, seaborn and matplotlib</p>
+                            </div>
+                        </div> 
+                    </div>                         
+                </div>
                     <div class="col-md-6 col-lg-4 eng">
                         <div class="portfolio-item">
                             <img src="assets/imgs/dax.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
@@ -450,18 +462,6 @@
                             </div>
                         </div>                                                       
                     </div> 
-                    <div class="col-md-6 col-lg-4 eng">
-                        <div class="portfolio-item">
-                            <img src="assets/imgs/social.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">  
-                           <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/social.png"></a>
-                                <div class="text-holder">
-                                    <h6 class="title">Financial Analysis</h6>
-                                    <p class="subtitle">Google Sheets, DAX, Python, Excel</p>
-                                </div>
-                            </div>
-                        </div>                                                     
-                    </div>
                     <div class="col-md-6 col-lg-4 eng">
                         <div class="portfolio-item">
                             <img src="assets/imgs/advertising-3.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">       
@@ -517,8 +517,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/heatmap_oil.png"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">BRANDING</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam</p>
+                                    <h6 class="title">Heatmap of Brazilian Stocks - Oil Sector</h6>
+                                    <p class="subtitle">Pandas, ifinance, seaborn and matplotlib</p>
                                 </div>
                             </div>
                         </div>                                                    
