--- a/index.html
+++ b/index.html
@@ -412,6 +412,55 @@
                             </div> 
                         </div>                         
                     </div>
+                    <div class="col-md-6 col-lg-4 eng"> 
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/powerbi.ong" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                               
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/powerbi.png"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">Power BI</h6>
+                                    <p class="subtitle">Power BI, DAX, Python, Excel</p>
+                                </div>
+                            </div>
+                        </div>                                                       
+                    </div> 
+                    <div class="col-md-6 col-lg-4 eng">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/social.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">       
+                           <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/social2.png"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">Financial Database</h6>
+                                    <p class="subtitle">Google Sheets, Python, Excel</p>
+                                </div>
+                            </div>
+                        </div>                                                       
+                    </div> 
+                    <div class="col-md-6 col-lg-4 eng"> 
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/advertising-4.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">            
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/advertising-4.jpg"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">ADVERTISING</h6>
+                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                </div>
+                            </div>
+                        </div>
+                                
+                    </div> 
+                    <div class="col-md-6 col-lg-4 eng">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/dax.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/dax.png"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">DATABASE</h6>
+                                    <p class="subtitle">Power BI, DAX, Python, Excel</p>
+                                </div>
+                            </div>
+                        </div>                                                     
+                    </div>
                     <div class="col-md-6 col-lg-4 science">
                         <div class="portfolio-item">
                             <img src="assets/imgs/heatmap_retail.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                         
@@ -437,56 +486,6 @@
                         </div> 
                     </div>                         
                 </div>
-                    <div class="col-md-6 col-lg-4 eng">
-                        <div class="portfolio-item">
-                            <img src="assets/imgs/dax.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
-                            <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/dax.png"></a>
-                                <div class="text-holder">
-                                    <h6 class="title">DATABASE</h6>
-                                    <p class="subtitle">Power BI, DAX, Python, Excel</p>
-                                </div>
-                            </div>
-                        </div>                                                     
-                    </div>
-
-                    <div class="col-md-6 col-lg-4 eng"> 
-                        <div class="portfolio-item">
-                            <img src="assets/imgs/powerbi.ong" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                               
-                            <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/powerbi.png"></a>
-                                <div class="text-holder">
-                                    <h6 class="title">Power BI</h6>
-                                    <p class="subtitle">Power BI, DAX, Python, Excel</p>
-                                </div>
-                            </div>
-                        </div>                                                       
-                    </div> 
-                    <div class="col-md-6 col-lg-4 eng">
-                        <div class="portfolio-item">
-                            <img src="assets/imgs/advertising-3.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">       
-                           <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/advertising-3.jpg"></a>
-                                <div class="text-holder">
-                                    <h6 class="title">ADVERSITING</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
-                                </div>
-                            </div>
-                        </div>                                                       
-                    </div> 
-                    <div class="col-md-6 col-lg-4 eng"> 
-                        <div class="portfolio-item">
-                            <img src="assets/imgs/advertising-4.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">            
-                            <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/advertising-4.jpg"></a>
-                                <div class="text-holder">
-                                    <h6 class="title">ADVERTISING</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
-                                </div>
-                            </div>
-                        </div>
-                                
-                    </div> 
                     <div class="col-md-6 col-lg-4 branding eng">
                         <div class="portfolio-item">
                             <img src="assets/imgs/branding-1.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                        
