--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4 eng"> 
                         <div class="portfolio-item">
-                            <img src="assets/imgs/powerbi.ong" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                               
+                            <img src="assets/imgs/powerbi.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                               
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/powerbi.png"></a>
                                 <div class="text-holder">
