--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                     <a href="#" data-filter=".science">
                         Data Science
                     </a>
-                    <a href="#" data-filter=".web">
+                    <a href="#" data-filter=".mach">
                         Machine Learning 
                     </a>
                 </div>
@@ -427,7 +427,7 @@
                     </div> 
                     <div class="col-md-6 col-lg-4 eng">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/social.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">       
+                            <img src="assets/imgs/social2.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">       
                            <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/social2.png"></a>
                                 <div class="text-holder">
@@ -472,7 +472,7 @@
                                 </div>
                             </div> 
                         </div>                         
-            
+                    </div>
                     <div class="col-md-6 col-lg-4 science">
                         <div class="portfolio-item">
                             <img src="assets/imgs/heatmap_oil.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">   
@@ -485,7 +485,7 @@
                             </div>
                         </div>                                                    
                     </div> 
-                    <div class="col-md-6 col-lg-4 science">
+                    <div class="col-md-6 col-lg-4 mach">
                         <div class="portfolio-item">
                             <img src="assets/imgs/web-scrap.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                      
                             <div class="content-holder">
@@ -497,7 +497,19 @@
                             </div>
                         </div>                                                      
                     </div> 
-                    <div class="col-md-6 col-lg-4 web">
+                    <div class="col-md-6 col-lg-4 mach">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/xgboost.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                      
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/xgboost.png"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">XGBoost Model</h6>
+                                    <p class="subtitle">Python, Pandas, matplotlib, plotly</p>
+                                </div>
+                            </div>
+                        </div>                                                      
+                    </div> 
+                    <div class="col-md-6 col-lg-4 mach">
                         <div class="portfolio-item">
                             <img src="assets/imgs/spleen.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">          
                             <div class="content-holder">
