--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                     </a>
                 </div>
                 <div class="portfolio-container"> 
-                    <div class="col-md-6 col-lg-4 eng">
+                    <div class="col-md-6 col-lg-4 science">
                         <div class="portfolio-item">
                             <img src="assets/imgs/oil_23.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
                             <div class="content-holder">
@@ -401,7 +401,7 @@
                             </div>
                         </div>
                     </div>                                                     
-                    <div class="col-md-6 col-lg-4 eng">
+                    <div class="col-md-6 col-lg-4 mach">
                         <div class="portfolio-item">
                             <img src="assets/imgs/ibov.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
                             <div class="content-holder">
