--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                             </div> 
                         </div>                         
                     </div>
-                    <div class="col-md-6 col-lg-4 eng">
+                    <div class="col-md-6 col-lg-4 science">
                         <div class="portfolio-item">
                             <img src="assets/imgs/social2.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">       
                            <div class="content-holder">
