--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                             <hr>
                             <h6 class="title text-danger">2021 - 2022</h6>
                             <P><b>Graduated Course in Artificial Intelligence and Machine Learning</b></P>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
+                            <P class="subtitle">A graduate course with a focus on solving industrial sector problems equips students with specialized skills in applying AI and ML techniques to real-world industrial challenges. Through rigorous coursework and industry-specific case studies, students learn to develop innovative solutions that optimize manufacturing processes, enhance quality control, and drive operational efficiency.</P>
                             <hr>
                             <h6 class="title text-danger">2017 - 2019</h6>
                             <P><b>Master's Degreee in Biomedical Engineering</b></P>
