--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                             <hr>
                             <h6 class="title text-danger">2017 - 2019</h6>
                             <P><b>Master's Degreee in Biomedical Engineering</b></P>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, id officiis quas placeat quia voluptas dolorum rem animi nostrum quae.aliquid repudiandae saepe!.</P>
+                            <P class="subtitle">A Master's Degree in Biomedical Engineering, with a project focused on the assessment of peak voltage accuracy and reproducibility, involves advanced studies in the field of biomedical engineering. The project specifically targets the evaluation of how accurately and consistently peak voltages are measured in biomedical equipment or devices.</P>
                             <hr>
                             <h6 class="title text-danger">2010 - 2015</h6>
                             <P><b>Bachelor's Degree in Physics</b></P>
