--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                             <hr>
                             <h6 class="title text-danger">2010 - 2015</h6>
                             <P><b>Bachelor's Degree in Physics</b></P>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
+                            <P class="subtitle">A Bachelor's Degree in Physics with a project in the particle field encompasses a comprehensive study of fundamental physical principles, with a specific focus on particle physics. The project likely involves research or experimentation related to subatomic particles, their interactions, or the study of high-energy particle collisions</P>
                         </div>
                     </div>
                 </div>
